snippets/Nemerle.Statechart/Tests/testsuite/negative/unknown_node_target.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "unknown node";
  
  state A
  {
    a => j1; // E: Unknown node "j1" used in target of "TransitionAToj1Bya" transition 
  }

  #>)]
  public class example
  {
  }

  
 
